fix: set header column gap so padding can't overflow

--- a/client/containers/Pub/PubHeader/pubHeader.scss
+++ b/client/containers/Pub/PubHeader/pubHeader.scss
@@ -128,6 +128,7 @@ $mobile-bottom-buttons-spacing: 10px;
             'top top'
             'middle-left middle-right'
             'bottom bottom';
+        column-gap: 20px;
 
         .pub-header-top-area {
             overflow: hidden;
